--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 [dependencies]
 rand="0.8.4"
 imgui = "0.11.0"
-winit = "0.24.0"
-image = "0.23.14"
-imgui-winit-support = { version = "0.11.0", features = ["winit-vulkan"] }
+winit = "0.28.6"
+image = "0.24.7"
+imgui-winit-support = "0.11.0"
+wgpu = "0.17.0"
+futures = "0.3.28"
